--- a/WebContent/views/uniqueTokens_CRUD.html
+++ b/WebContent/views/uniqueTokens_CRUD.html
@@ -9,6 +9,25 @@
   https://www.tutorialrepublic.com/twitter-bootstrap-tutorial/bootstrap-affix.php
   https://www.tutorialrepublic.com/css-reference/css-top-property.php
   -->
+<!--
+D:\glassfish4\glassfish\domains\domain1\eclipseApps\yardiWeb\views == ../resources/styles/bootstrap.min.css
+../ == D:\glassfish4\glassfish\domains\domain1\eclipseApps\yardiWeb
+
+
+NEW
+======================================
+D:\glassfish4\glassfish\lib\resources
+======================================
+D:\glassfish4\glassfish\domains\domain1\eclipseApps\yardiWeb\views
+../ == D:\glassfish4\glassfish\domains\domain1\eclipseApps\yardiWeb
+../ == D:\glassfish4\glassfish\domains\domain1\eclipseApps
+../ == D:\glassfish4\glassfish\domains\domain1\
+../ == D:\glassfish4\glassfish\domains\
+../ == D:\glassfish4\glassfish\
+../../../../../lib/resources/
+
+Try using jquery to change the html on the <link> tags and the <script> tags
+-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="../resources/styles/bootstrap.min.css" rel="stylesheet" />
   <link href="../resources/css/font-awesome.min.css" rel="stylesheet">
@@ -16,6 +35,12 @@
   <script src="../resources/scripts/Moment/moment.min.js" type="text/javascript"></script>
   <script src="../resources/scripts/DatePicker/bootstrap-datetimepicker.min.js" type="text/javascript"></script>
   <script src="../resources/scripts/bootstrap.min.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/cldrjs/dist/cldr.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/cldrjs/dist/cldr/event.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/cldrjs/dist/cldr/supplemental.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/globalize/dist/globalize.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/globalize/dist/globalize/number.js"></script>
+  <script src="../resources/scripts/jquery-globalize.1.3.0/globalize/dist/globalize/date.js"></script>
   <!--
   <link href="../../../../Boostrap/styles/bootstrap.min.css" rel="stylesheet">
   <script src="../../../../jQueryLib/scripts/jquery-2.2.4.min.js"></script>
@@ -100,10 +125,47 @@
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+  
+table {
+        width: 100%;
+}
+
+thead, tbody, tr, td, th { display: block; }
+
+tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+thead th {
+    height: 30px;
+
+    /*text-align: left;*/
+}
+
+tbody {
+    height: 700px;
+    overflow-y: auto;
+}
+
+thead {
+    /* fallback */
+}
+
+tbody td, thead th {
+    width: 19.2%;
+    float: left;
+}
+
+.orange {
+  color: darkorange;
+}
 </style>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -172,9 +234,33 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+  <div class="col-md-12">
+    <table class="table table-striped" id='tokensTable'>
+    </table>
+  </div>
+            <div class="col-md-2 formElementPadBottom ">
+                <input type="text" class="form-control" name="dob" id="dob" required  
+                       placeholder="mm/dd/yyyy"/>
+                <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+						</div>
+	<div class="actionButtons" class="actionButtons">
+		<button type="button" class="btn btn-success" id="updateButton" style="background-color: darkturquoise;">Update</button>
+		<button type="button" class="btn btn-success" id="cancelButon" style="background-color: red;">Cancel</button>
+	</div>
+
 <script>
   var viewMode = false;
   $(function () {
+    //$('.newToken').children('#tokenRRN').hide(); //ID of a table row
+    //$('.newToken').children('#tokenDLT').hide();
+    //$('.newToken').hide();
+    var findButtonDisabled;
+		var formItems;
+    var formData;
+    var ajaxData;
+		configureButtons(false, true, true);
     configureViewMode();
     $('.navbar-brand').click(function() {
       newFrame('views/QSECOFR_Main.html');
@@ -227,8 +313,172 @@
     $('#PPChange').click(function() {
       newFrame('views/passwordPolicy_CRUD.html');
     });
+    $('#findBtn').click(function() {
+      setFormItems('find', ajaxData);
+      setFormData();
+      doPost();
+    });
+		$('#cancelButon').click(function() {
+			configureButtons(false, true, true);
+			$('#username').val('');
+			$('#form-feedback').text('');
+			$('#tokensTable').html('');
+		}); 
+		$('#updateButton').click(function() {
+      setFormItems('update', doUpdate());
+      setFormData();
+      doPost();
+			configureButtons(false, true, true);
+			$('#username').val('');
+			$('#form-feedback').text('');
+			$('#tokensTable').html('');
+		}); 
   });
   
+  function doPost() {
+    $.ajax({
+      type:     'POST',
+      url:      '../editUniqueTokens',
+      data:     formData,
+      dataType: "json", 
+      success:  function (ajaxData) {
+        ajaxSuccess(ajaxData);
+      } 
+    });
+  }
+  
+  function ajaxSuccess(data) {
+    setFormItems('ajaxSuccess', data);
+  }
+  
+  function setFormItems(action, data) {
+    if (
+          action === 'find'
+       ){
+          formItems = {
+            "action"               : action,
+            "msgID"                : '',                      
+            "msgDescription"       : '',                       
+            "findUser"             : $('#username').val(),
+						"up1UserName"					 : '',
+            "up1Token"             : '',
+            "up1DateAdded" 				 : '',
+            "up1Rrn" 		           : '',
+            "deleteToken"          : '',
+            "uniqueTokensString"   : ''
+          } 
+        }
+    
+    if (action === 'ajaxSuccess') {
+      formItems = {
+        "action"                : action,
+        "msgID"                 : data.msgID,                      
+        "msgDescription"        : data.msgDescription,                       
+        "findUser"              : data.findUser,
+				"up1UserName"						: '',
+        "up1Token"              : '',
+        "up1DateAdded" 				  : '',
+        "up1Rrn"	              : '',
+        "deleteToken"           : '',
+        "uniqueTokensString"    : data.uniqueTokensString
+      }
+			
+			if (formItems.msgID === 'YRD0000') {
+				configureButtons(true, false, false);
+				$('#form-feedback').text('');
+				$('#tokensTable').html('');
+				$('#tokensTable').append(
+					   '<thead>'
+           + '<tr id="tableHeaders">'
+					 + '  <th>Token</th>'
+        	 + '  <th>Date</th>'
+					 + '  <th>RRN</th>'
+					 + '  <th>DLT</th>'
+        	 + '</tr>'
+        	 + '</thead>'
+        	 + '<tbody>'
+      	);
+				var tableRows = 0;
+				$.each(JSON.parse(data.uniqueTokensString), function(key, value) { 
+        	console.log('key:' + key 
+											 + ' | up1Token:' 
+                    	 + value.up1Token
+                    	 + ' | up1DateAdded:' 
+                    	 + value.up1DateAdded
+                     	 + ' | up1Rrn:'
+											 + value.up1Rrn
+										 );
+					tableRows++;
+        	if (getAllUrlParams().mode != 'view') {
+          	$('#tokensTable').append(
+								'<tr class="existingToken" id="tableRow">'
+            	+ '<td id="userToken">'
+							+ '<input type="text" class="roundedCorners" name="userToken1" id="userToken1" required value="'
+							+ value.up1Token
+							+ '"/>'
+							+ '</td>'
+							+ '<td id="dateAdded">'
+            	+ '<div class="input-group date" id="datePicker">'
+            	+ '<input type="text" class="form-control" name="tokenDate" id="tokenDate" required ' 
+            	+ 'placeholder="mm/dd/yyyy" value="'
+            	+ value.up1DateAdded
+            	+ '"/>'
+            	+ '<span class="input-group-addon">'
+            	+ '<span class="glyphicon glyphicon-calendar"></span>'
+            	+ '</span>'
+            	+ '</div>'
+            	+ '</td>'
+            	+ '<td id="tokenRRN">'
+            	+ value.up1Rrn
+            	+ '</td>'
+            	+ '<td id="tokenDLT">'
+            	+ '<input type="checkbox" name="dlt" id="dlt" value=" ">'
+            	+ '</td>'
+            	+ '</tr>'
+          	);
+					} else {
+          	$('#tokensTable').append(
+              	'<tr class="newToken" id="tableRow">'
+            	+ '<td id="userToken">'
+            	+ value.up1Token
+            	+ '</td>'
+            	+ '<td id="dateAdded">'
+            	+ value.up1DateAdded
+            	+ '</td>'
+            	+ '<td id="tokenRRN">'
+            	+ '0'
+            	+ '</td>'
+            	+ '</tr>'
+          	);
+					}
+      	} );
+					$('#tokensTable').append('</tbody>');
+				} else {
+					$('#form-feedback').text('No such user');
+					configureButtons(false, true, true);
+				}
+		}
+		
+		if (action === 'update') {
+      formItems = {
+        "action"                : action,
+        "msgID"                 : '',                      
+        "msgDescription"        : '',                       
+        "findUser"              : $('#username').val(),
+				"up1UserName"						: '',
+        "up1Token"              : '',
+        "up1DateAdded" 				  : '',
+        "up1Rrn"	              : '',
+        "deleteToken"           : '',
+        "uniqueTokensString"    : data
+      }
+		}
+  }
+  
+  function setFormData() {
+     formData = JSON.stringify(formItems);
+  }
+
   function newFrame(newFrame) {
     $('html').html(newFrame);
     console.log(' nextFrame=' + newFrame);
@@ -237,11 +487,6 @@
   }
 
   function configureViewMode() {
-    /**
-      Protect input fields when:
-        1. Its view mode 
-        2. Its not view mode and the find button is enabled
-    **/
     $('#title-loginID').text('Unique Tokens Maintenance    ' + parent.userName);
     viewMode = false;
 
@@ -249,15 +494,6 @@
       viewMode = true;
       console.log('view mode');
       $('#title-loginID').text('Unique Tokens Maintenance    VIEW MODE    ' + parent.userName);
-    }
-    
-    /**
-      Protect input fields when:
-        1. Its view mode 
-        2. Its not view mode and the find button is enabled
-    **/
-    if ((!viewMode) && (findButtonDisabled == false)) {
-      //disable the rest of the input fields
     }
   }
   
@@ -322,6 +558,41 @@
 
     return obj;
   }
+	
+	function configureButtons(findBtn, updateBtn, cancelBtn) {
+    
+		if (findBtn) {
+			$('#findBtn')   .attr('disabled', true);
+			$('#username')  .attr("disabled", true);
+			findButtonDisabled = true;
+		} else {
+			$('#findBtn')   .attr('disabled', false);
+			$('#username')  .attr("disabled", false);    
+			findButtonDisabled = false;
+		}                   
+                          
+		$('#updateButton').attr("disabled", updateBtn);
+		$('#cancelButon') .attr("disabled", cancelBtn);
+  }
+	
+	function doUpdate() {
+		//https://stackoverflow.com/questions/17120633/loop-through-each-html-table-column-and-get-the-data-using-jquery
+		var uniqueTokens = [];
+		$('.existingToken').each(function(k, v) {
+			var uniqueToken = {
+													up1UserName:	$('#username').val(),
+  												up1Token:			$(this).find('#userToken1').val(),
+  												up1DateAdded:	$(this).find('#tokenDate').val(),
+  												up1Rrn:				$(this).find('#tokenRRN').text(),
+													deleteToken:	$(this).find('#dlt').is(':checked')
+												};
+			uniqueTokens.push(uniqueToken);
+			console.log('k=' + k + ' | v=' + v);
+		});
+		var x = JSON.stringify(uniqueTokens);
+		console.log('uniqueTokens[] as JSON=' + x);
+		return x;
+	}
 </script>
 </body>
 </html>
